ip6tables
# Generated by ip6tables-save v1.6.1 on Sun Nov 29 17:34:34 2020
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -p udp -m udp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 40 --to 65535 -j LOG --log-prefix "BLOCKED IPv6 UDP ANY: "
-A PREROUTING -p udp -m udp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 40 --to 65535 -j DROP
-A PREROUTING -p tcp -m tcp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 52 --to 65535 -j LOG --log-prefix "BLOCKED IPv6 TCP ANY: "
-A PREROUTING -p tcp -m tcp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 52 --to 65535 -j DROP
-A PREROUTING -p udp -m udp --dport 53 -m u32 --u32 "0x28=0xff00" -j LOG --log-prefix "BLOCKED IPv6 ROOT: "
-A PREROUTING -p udp -m udp --dport 53 -m u32 --u32 "0x28=0xff00" -j DROP
-A PREROUTING -p udp -m string --hex-string "|03697363036f7267|" --algo bm --to 65535 -m udp --dport 53 -j LOG --log-prefix "BLOCKED IPv6 isc.org: "
-A PREROUTING -p udp -m string --hex-string "|03697363036f7267|" --algo bm --to 65535 -m udp --dport 53 -j DROP
-A PREROUTING -p udp -m string --hex-string "|0472697065036e6574|" --algo bm --to 65535 -m udp --dport 53 -j LOG --log-prefix "BLOCKED IPv6 ripe.net: "
-A PREROUTING -p udp -m string --hex-string "|0472697065036e6574|" --algo bm --to 65535 -m udp --dport 53 -j DROP
COMMIT
# Completed on Sun Nov 29 17:34:34 2020
# Generated by ip6tables-save v1.6.1 on Sun Nov 29 17:34:34 2020
*filter
:INPUT ACCEPT [5:1074]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5:1074]
-A INPUT -i ens5 -p udp -m hashlimit --hashlimit-above 25/sec --hashlimit-burst 50 --hashlimit-mode srcip --hashlimit-name DNSTHROTTLE --hashlimit-srcmask 32 -m udp --dport 53 -j LOG --log-prefix "IPv6 THROTTLED: "
-A INPUT -i ens5 -p udp -m hashlimit --hashlimit-above 25/sec --hashlimit-burst 50 --hashlimit-mode srcip --hashlimit-name DNSTHROTTLE --hashlimit-srcmask 32 -m udp --dport 53 -j DROP
-A INPUT -i ens5 -p udp -m hashlimit --hashlimit-upto 25/sec --hashlimit-burst 50 --hashlimit-mode srcip --hashlimit-name DNSTHROTTLE --hashlimit-srcmask 32 -m udp --dport 53 -j ACCEPT
COMMIT
# Completed on Sun Nov 29 17:34:34 2020
