iptables
# Generated by iptables-save v1.6.1 on Mon Oct 19 23:22:14 2020
*raw
:PREROUTING ACCEPT [79:5384]
:OUTPUT ACCEPT [71:6968]
-A PREROUTING -p udp -m udp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 40 --to 65535 -j LOG --log-prefix "BLOCKED IPv4 UDP ANY: "
-A PREROUTING -p udp -m udp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 40 --to 65535 -j DROP
-A PREROUTING -p tcp -m tcp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 52 --to 65535 -j LOG --log-prefix "BLOCKED IPv4 TCP ANY: "
-A PREROUTING -p tcp -m tcp --dport 53 -m string --hex-string "|0000ff0001|" --algo bm --from 52 --to 65535 -j DROP
-A PREROUTING -p udp -m udp --dport 53 -m u32 --u32 "0x28=0xff00" -j LOG --log-prefix "BLOCKED IPv4 ROOT: "
-A PREROUTING -p udp -m udp --dport 53 -m u32 --u32 "0x28=0xff00" -j DROP
-A PREROUTING -p udp -m string --hex-string "|03697363036f7267|" --algo bm --to 65535 -m udp --dport 53 -j LOG --log-prefix "BLOCKED IPv4 isc.org: "
-A PREROUTING -p udp -m string --hex-string "|03697363036f7267|" --algo bm --to 65535 -m udp --dport 53 -j DROP
-A PREROUTING -p udp -m string --hex-string "|0472697065036e6574|" --algo bm --to 65535 -m udp --dport 53 -j LOG --log-prefix "BLOCKED IPv4 ripe.net: "
-A PREROUTING -p udp -m string --hex-string "|0472697065036e6574|" --algo bm --to 65535 -m udp --dport 53 -j DROP
COMMIT
# Completed on Mon Oct 19 23:22:14 2020
# Generated by iptables-save v1.6.1 on Mon Oct 19 23:22:14 2020
*filter
:INPUT ACCEPT [37:2428]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [29:2496]
-A INPUT -i ens5 -p udp -m hashlimit --hashlimit-above 25/sec --hashlimit-burst 25 --hashlimit-mode srcip --hashlimit-name DNSTHROTTLE -m udp --dport 53 -j DROP
-A INPUT -i ens5 -p udp -m hashlimit --hashlimit-upto 25/sec --hashlimit-burst 25 --hashlimit-mode srcip --hashlimit-name DNSTHROTTLE -m udp --dport 53 -j ACCEPT
-A INPUT -i ens5 -p udp -m hashlimit --hashlimit-above 25/sec --hashlimit-burst 25 --hashlimit-mode srcip --hashlimit-name DNSTHROTTLE -m udp --dport 53 -j LOG --log-prefix "IPv4 THROTTLED: "
COMMIT
# Completed on Mon Oct 19 23:22:14 2020
